<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XmPluginDemo</string>
    <string name="hello_world">这是小米智能家庭插件</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">欢迎使用小米开发板</string>
    <string name="control_example">控制示例</string>
    <string name="cloud_debug">云端调试</string>
    <string name="create_product">创建自己的产品</string>

    <!-- control -->
    <string name="control_title">控制示例</string>
    <string name="control_desc">通过指令控制三原色灯珠</string>
    <string name="send">发送指令</string>

    <!-- welcome -->
    <string name="welcome_developer">你好，开发者 \n\n 终于等到你的到来，在小米智能硬件平台，您有机会创造出惊艳世界的智能产品。 \n\n 未来是智能化的时代，我们准备好了，你呢?</string>

    <!--advertisement-->
    <string name="ad_pop">插屏弹窗</string>
    <string name="ad_bottom_pop">底部弹窗</string>
    <string name="ad_bottom_flow">底部浮窗</string>
    <string name="ad_banner">Banner广告</string>
    <string name="ad_notice">横切公告</string>
    <string name="ad_hot_spot">热区广告</string>
    <string name="ad_hot_spot_desc">热区广告的样式由插件开发者自行定义，展示后请上报广告的展示事件，便于统计</string>
    <string name="ad_pop_show">获取插屏弹窗</string>
    <string name="ad_bottom_pop_show">获取底部下方弹窗</string>
    <string name="ad_banner_show">获取Banner广告</string>
    <string name="ad_notice_show">获取横切公告</string>
    <string name="ad_show_success">获取广告成功</string>
    <string name="ad_show_fail">获取广告失败</string>

    <string name="user_license_new"><![CDATA[
【重要须知】<br/>
    【小米科技有限责任公司；北京小米移动软件有限公司】（如下简称“米家”）在此特别提醒用户认真阅读、充分理解本《软件许可及服务协议》（下称“本协议”）。用户应认真阅读、充分理解本协议中各条款，特别涉及免除或者限制米家责任、争议解决和法律适用的条款。免除或者限制责任的条款将以粗体标识，您需要重点阅读。请您审慎阅读并选择接受或不接受本协议（未成年人应在法定监护人陪同下阅读）。您的下载、安装、使用本软件以及账号获取和登录等行为将视为对本协议的接受，并同意接受本协议各项条款的约束。<br/><br/>

    米家有权修订本协议，更新后的协议条款将公布于官网或软件，自公布之日起生效。用户可重新下载安装本软件或网站查阅最新版协议条款。在米家修改本协议条款后，如果用户不接受修改后的条款，请立即停止使用米家提供的“米家”软件和服务，用户继续使用米家提供的“米家”软件和服务将被视为已接受了修改后的协议。<br/><br/>

一、总则<br/>
1.1. 本协议是您（如下也称“用户”）与米家及其运营合作单位（如下简称“合作单位”）之间关于用户下载、安装、使用米家“米家”软件（下称“本软件”）以及使用米家相关服务所订立的协议。<br/>
1.2. 本软件及服务是米家提供的安装在包括但不限于移动智能终端设备上的软件和服务，为使用该智能终端的用户提供官方的驱动程序以及米家的服务等。<br/>
1.3. 本软件及服务的所有权和运营权均归米家所有。<br/><br/>

二、软件授权范围<br/>
2.1. 米家就本软件给予用户一项个人的、不可转让、不可转授权以及非独占性的许可。<br/>
2.2. 用户可以为非商业目的在单一台移动终端设备上安装、使用、显示、运行本软件。但用户不得为商业运营目的安装、使用、运行本软件，不可以对本软件或者本软件运行过程中释放到任何终端设备内存中的数据及本软件运行过程中客户端与服务器端的交互数据进行复制、更改、修改、挂接运行或创作任何衍生作品，形式包括但不限于使用插件、外挂或非经授权的第三方工具/服务接入本软件和相关系统。如果需要进行商业性的销售、复制和散发，例如软件预装和捆绑，必须获得米家的书面授权和许可。<br/>
2.3. 用户不得未经米家许可，将本软件安装在未经米家明示许可的其他终端设备上，包括但不限于机顶盒、游戏机、电视机、DVD机等。<br/>
2.4. 用户可以为使用本软件及服务的目的复制本软件的一个副本，仅用作备份。备份副本必须包含原软件中含有的所有著作权信息。<br/>
2.5. 除本《协议》明示授权外，米家未授权给用户其他权利，若用户使用其他权利时须另外取得米家的书面同意。<br/><br/>

三、软件的获取、安装、升级<br/>
3.1. 用户应当按照米家的指定网站或指定方式下载安装本软件产品。谨防在非指定网站下载本软件，以免移动终端设备感染能破坏用户数据和获取用户隐私信息的恶意程序。如果用户从未经米家授权的第三方获取本软件或与本软件名称相同的安装程序，米家无法保证该软件能够正常使用，并对因此给您造成的损失不予负责。<br/>
3.2. 用户必须选择与所安装终端设备相匹配的本软件版本，否则，由于软件与设备型号不相匹配所导致的任何软件问题、设备问题或损害，均由用户自行承担。<br/>
3.3. 为了改善用户体验、完善服务内容，米家有权不时地为您提供本软件替换、修改、升级版本，也有权为替换、修改或升级收取费用，但将收费提前征得您的同意。
本软件为用户默认开通“升级提示”功能，视用户使用的软件版本差异，米家提供给用户自行选择是否需要开通此功能。软件新版本发布后，米家不保证旧版本软件的继续可用。<br/><br/>

]]>
    </string>

</resources>