<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/sub_title_bar_black" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/float_ad"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/common_white_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ad_pop"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/alert_dialog_ad"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/common_white_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ad_bottom_pop"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/banner_ad"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/common_white_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ad_banner"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notice_ad"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/common_white_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ad_notice"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hot_spot_ad"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:background="@drawable/common_white_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/ad_hot_spot"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="3dp"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>